# app/controllers.go
@@ -39,7 +39,6 @@ type HomeController interface {
 	goa.FileServer
 	Dashboard(*DashboardHomeContext) error
 	Profile(*ProfileHomeContext) error
-	SetType(*SetTypeHomeContext) error
 }
 
 // MountHomeController "mounts" a Home resource controller on the given service.
@@ -74,33 +73,42 @@ func MountHomeController(service *goa.Service, ctrl HomeController) {
 		}
 		return ctrl.Profile(rctx)
 	}
-	service.Mux.Handle("GET", "/settype", ctrl.MuxHandler("Profile", h, nil))
-	service.LogInfo("mount", "ctrl", "Home", "action", "Profile", "route", "GET /settype")
-
-	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
-		// Check if there was an error loading the request
-		if err := goa.ContextError(ctx); err != nil {
-			return err
-		}
-		// Build the context
-		rctx, err := NewSetTypeHomeContext(ctx, service)
-		if err != nil {
-			return err
-		}
-		return ctrl.SetType(rctx)
-	}
-	service.Mux.Handle("GET", "/settype", ctrl.MuxHandler("SetType", h, nil))
-	service.LogInfo("mount", "ctrl", "Home", "action", "SetType", "route", "GET /settype")
+	service.Mux.Handle("GET", "/profile", ctrl.MuxHandler("Profile", h, nil))
+	service.LogInfo("mount", "ctrl", "Home", "action", "Profile", "route", "GET /profile")
 
 	h = ctrl.FileHandler("/static/*filename", "static/")
 	service.Mux.Handle("GET", "/static/*filename", ctrl.MuxHandler("serve", h, nil))
 	service.LogInfo("mount", "ctrl", "Home", "files", "static/", "route", "GET /static/*filename")
 
-	h = ctrl.FileHandler("/favicon.ico", "static/favicon.ico")
-	service.Mux.Handle("GET", "/favicon.ico", ctrl.MuxHandler("serve", h, nil))
-	service.LogInfo("mount", "ctrl", "Home", "files", "static/favicon.ico", "route", "GET /favicon.ico")
+	h = ctrl.FileHandler("/bower_components/*filename", "static/bower_components/")
+	service.Mux.Handle("GET", "/bower_components/*filename", ctrl.MuxHandler("serve", h, nil))
+	service.LogInfo("mount", "ctrl", "Home", "files", "static/bower_components/", "route", "GET /bower_components/*filename")
+
+	h = ctrl.FileHandler("/images/favicon.ico", "static/images/favicon.ico")
+	service.Mux.Handle("GET", "/images/favicon.ico", ctrl.MuxHandler("serve", h, nil))
+	service.LogInfo("mount", "ctrl", "Home", "files", "static/images/favicon.ico", "route", "GET /images/favicon.ico")
+
+	h = ctrl.FileHandler("/index.html", "static/index.html")
+	service.Mux.Handle("GET", "/index.html", ctrl.MuxHandler("serve", h, nil))
+	service.LogInfo("mount", "ctrl", "Home", "files", "static/index.html", "route", "GET /index.html")
+
+	h = ctrl.FileHandler("/index", "static/index.html")
+	service.Mux.Handle("GET", "/index", ctrl.MuxHandler("serve", h, nil))
+	service.LogInfo("mount", "ctrl", "Home", "files", "static/index.html", "route", "GET /index")
+
+	h = ctrl.FileHandler("/src/*filename", "static/src/")
+	service.Mux.Handle("GET", "/src/*filename", ctrl.MuxHandler("serve", h, nil))
+	service.LogInfo("mount", "ctrl", "Home", "files", "static/src/", "route", "GET /src/*filename")
 
 	h = ctrl.FileHandler("/static/", "static\\index.html")
 	service.Mux.Handle("GET", "/static/", ctrl.MuxHandler("serve", h, nil))
 	service.LogInfo("mount", "ctrl", "Home", "files", "static\\index.html", "route", "GET /static/")
+
+	h = ctrl.FileHandler("/bower_components/", "static\\bower_components\\index.html")
+	service.Mux.Handle("GET", "/bower_components/", ctrl.MuxHandler("serve", h, nil))
+	service.LogInfo("mount", "ctrl", "Home", "files", "static\\bower_components\\index.html", "route", "GET /bower_components/")
+
+	h = ctrl.FileHandler("/src/", "static\\src\\index.html")
+	service.Mux.Handle("GET", "/src/", ctrl.MuxHandler("serve", h, nil))
+	service.LogInfo("mount", "ctrl", "Home", "files", "static\\src\\index.html", "route", "GET /src/")
 }
